Can't figure out why routes and api wont work

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-URI = mongodb+srv://root:<password>@cluster0.3o0sd.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+URI = mongodb+srv://root:K3ndal1!@cluster0.3o0sd.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
